--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- length-container -->
             <div class="length-container">
                 <p>Passaword Length</p>
-                <p lengthNumber>0</p>
+                <p lengthNumber></p>
             </div>
 
             <!-- Slider -->
